--- a/vue_p/package.json
+++ b/vue_p/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "crypto": "^1.0.1",
-    "echarts": "^5.1.2",
+    "echarts": "4.9.0",
     "element-ui": "^2.15.2",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.1",
